--- a/metrics/build.gradle
+++ b/metrics/build.gradle
@@ -40,6 +40,7 @@ def pomConfig = {
 
 dependencies {
     implementation "io.micrometer:micrometer-core:${micrometerVersion}"
+    implementation "io.dropwizard.metrics:metrics-core:${metricsVersion}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
