--- a/datastore-test/build.gradle
+++ b/datastore-test/build.gradle
@@ -74,4 +74,9 @@ dependencies {
     api("org.mockito:mockito-core:${mockitoVersion}")
     testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
     testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
+
+    implementation "com.datastax.oss:java-driver-core:${cassandraDriverVersion}"
+    implementation "com.datastax.oss:java-driver-query-builder:${cassandraDriverVersion}"
+    implementation "com.datastax.oss:java-driver-mapper-runtime:${cassandraDriverVersion}"
+    implementation "org.cassandraunit:cassandra-unit:${cassandraUnitVersion}"
 }
