--- a/keystore-service/src/main/resources/dev-config.yaml
+++ b/keystore-service/src/main/resources/dev-config.yaml
@@ -7,13 +7,18 @@ logging:
     - type: console
       logFormat: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
 
-metrics:
-  frequency: 1 minute
-  reportOnStop: true
-  reporters:
-    - type: log
-      logger: metrics
-      markerName: SLF4j
+#metrics:
+#  frequency: 1 minute
+#  reportOnStop: true
+#  reporters:
+#    - type: log
+#      logger: metrics
+#      markerName: SLF4j
+#    - type: graphite
+#      host: localhost
+#      port: 2003
+#      prefix: keystore
+#      transport: tcp
 
 health:
   healthCheckUrlPaths: [ "/health-check" ]
