--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,4 @@ include 'codehead-test', 'datastore-test', 'statemachine',
         'metrics', 'metrics-test',
         'oop-mock-common', 'oop-mock-client', 'oop-mock', 'oop-mock-dynamodb', 'oop-mock-tests',
         'keystore-common', 'keystore-dao', 'keystore-dao-test', 'keystore-dao-ddb', 'keystore-dao-cassandra',
-        'keystore-api', 'keystore-service'
+        'keystore-api', 'keystore-service', 'keystore-client'
