--- a/keystore-api/build.gradle
+++ b/keystore-api/build.gradle
@@ -17,6 +17,10 @@ configurations {
 
 jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
+checkstyle {
+    ignoreFailures = false
+    maxWarnings = 0
+}
 dependencies {
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
 
