--- a/keystore-client/build.gradle
+++ b/keystore-client/build.gradle
@@ -17,6 +17,10 @@ configurations {
 
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
+checkstyle {
+    ignoreFailures = false
+    maxWarnings = 0
+}
 dependencies {
     implementation project(":keystore-common")
     implementation project(":keystore-api")
