Updated cassandra extension to use test containeres. We require docker now.

--- a/datastore-test/build.gradle
+++ b/datastore-test/build.gradle
@@ -83,4 +83,6 @@ dependencies {
     implementation "com.datastax.oss:java-driver-query-builder:${cassandraDriverVersion}"
     implementation "com.datastax.oss:java-driver-mapper-runtime:${cassandraDriverVersion}"
     implementation "org.cassandraunit:cassandra-unit:${cassandraUnitVersion}"
+    implementation "org.testcontainers:testcontainers:${testContainerVersion}"
+    implementation "org.testcontainers:cassandra:${testContainerVersion}"
 }
