--- a/build.gradle
+++ b/build.gradle
@@ -153,5 +153,6 @@ ext {
     retrofitVersion = '2.9.0' // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     resilience4jVersion = '1.7.1' // https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-retry
     slf4jVersion = '1.7.36' // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    testContainerVersion = "1.17.3" // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
 }
 
