Reformated the binder due to generics miss.
Really the issue is in java generics, but dagger has no reasonable
workaround. So I'm doing a cast. Sadness.

--- a/keystore-dao-ddb/build.gradle
+++ b/keystore-dao-ddb/build.gradle
@@ -18,6 +18,16 @@ configurations {
 
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
+task copyNativeDeps(type: Copy) {
+    from configurations.dynamodb
+    into "$project.buildDir/libs/"
+}
+
+test.dependsOn copyNativeDeps
+test.doFirst {
+    systemProperty "java.library.path", 'build/libs'
+}
+
 dependencies {
     // DynamoDB testing
     dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
