--- a/keystore-dao-cassandra/build.gradle
+++ b/keystore-dao-cassandra/build.gradle
@@ -16,7 +16,7 @@ configurations {
     dynamodb
 }
 
-//jacocoTestReport.finalizedBy jacocoTestCoverageVerification
+jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 checkstyle {
     ignoreFailures = false
