--- a/keystore-dao-ddb/build.gradle
+++ b/keystore-dao-ddb/build.gradle
@@ -18,6 +18,11 @@ configurations {
 
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
+checkstyle {
+    ignoreFailures = false
+    maxWarnings = 0
+}
+
 task copyNativeDeps(type: Copy) {
     from configurations.dynamodb
     into "$project.buildDir/libs/"
