--- a/keystore-service/build.gradle
+++ b/keystore-service/build.gradle
@@ -21,16 +21,22 @@ configurations {
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
-    // DynamoDB testing
+    // DynamoDB
     dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
+    implementation "software.amazon.awssdk:dynamodb:${awsSDK2}"
+    implementation project(":keystore-dao-ddb")
+
+    // Cassandra
+//    implementation project(":keystore-dao-cassandra")
+//    testImplementation "org.testcontainers:testcontainers:${testContainerVersion}"
+//    testImplementation "org.testcontainers:cassandra:${testContainerVersion}"
+//    testImplementation "org.testcontainers:junit-jupiter:${testContainerVersion}"
 
     implementation project(":keystore-dao")
-    implementation project(":keystore-dao-ddb")
     implementation project(":keystore-common")
     implementation project(":keystore-api")
     implementation project(":metrics")
 
-    implementation "software.amazon.awssdk:dynamodb:${awsSDK2}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
     implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
@@ -69,5 +75,5 @@ dependencies {
 
 run {
     args 'server', configPath + 'dev-config.yaml'
-    mainClassName = "com.codeheadsystems.terrapin.keystore.Server"
+    mainClassName = "com.codeheadsystems.keystore.Server"
 }
