--- a/keystore-service/src/main/resources/dev-config.yaml
+++ b/keystore-service/src/main/resources/dev-config.yaml
@@ -1,3 +1,6 @@
+
+dropWizardFactory: com.codeheadsystems.keystore.dagger.DynamoDBServer
+
 logging:
   level: INFO
   loggers:
@@ -19,6 +22,11 @@ logging:
 #      port: 2003
 #      prefix: keystore
 #      transport: tcp
+
+dataStore:
+  connectionUrl: http://localhost:8000
+  username: someone
+  password: secret
 
 health:
   healthCheckUrlPaths: [ "/health-check" ]
