--- a/keystore-integ-tests/build.gradle
+++ b/keystore-integ-tests/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation "io.github.openfeign:feign-slf4j:${openfeign}"
     implementation "io.github.openfeign:feign-micrometer:${openfeign}"
     implementation "io.github.openfeign:feign-java11:${openfeign}"
-    implementation "io.github.openfeign:feign-jaxrs:${openfeign}"
+    implementation "io.github.openfeign:feign-jaxrs2:${openfeign}"
 
     compileOnly "org.immutables:value:${immutablesVersion}"
     annotationProcessor "org.immutables:value:${immutablesVersion}"
@@ -58,4 +58,10 @@ dependencies {
     testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
     testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
     testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
+
+    testImplementation "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
+    testImplementation "org.testcontainers:testcontainers:${testContainerVersion}"
+    testImplementation "org.testcontainers:cassandra:${testContainerVersion}"
+    testImplementation "org.testcontainers:junit-jupiter:${testContainerVersion}"
+    testImplementation "io.netty:netty-all:${nettyVersion}"
 }
