Forcing code coverage on server project

--- a/keystore-service/build.gradle
+++ b/keystore-service/build.gradle
@@ -18,7 +18,7 @@ configurations {
     dynamodb
 }
 
-//jacocoTestReport.finalizedBy jacocoTestCoverageVerification
+jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 checkstyle {
     ignoreFailures = false
