--- a/build.gradle
+++ b/build.gradle
@@ -143,10 +143,12 @@ ext {
     immutablesVersion = '2.9.2' // https://mvnrepository.com/artifact/org.immutables/value
     jacksonVersion = '2.13.4' // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
     jacksonDatabindVersion = '2.13.4' // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    jakartaServletVersion = '6.0.0' // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
     javaxInjectVersion = '1'
+    javaxServletVersion = '4.0.1' // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
     jupiterVersion = '5.9.0' // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     log4jVersion = '2.19.0' //  https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
-    logbackVersion = '1.2.11' // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
+    logbackVersion = '1.4.1' // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
     metricsVersion = '4.2.12' // https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core
     micrometerVersion = '1.9.4' // https://mvnrepository.com/artifact/io.micrometer/micrometer-core
     mockitoVersion = '4.8.0' // https://mvnrepository.com/artifact/org.mockito/mockito-core
@@ -154,7 +156,7 @@ ext {
     openfeign = '11.9.1' // https://mvnrepository.com/artifact/io.github.openfeign/feign-core
     retrofitVersion = '2.9.0' // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     resilience4jVersion = '1.7.1' // https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-retry
-    slf4jVersion = '1.7.36' // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    slf4jVersion = '2.0.1' // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     testContainerVersion = "1.17.3" // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
 }
 
