--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,8 @@ group 'com.codeheadsystems.terrapin'
 version '1.0.0-SNAPSHOT'
 
 ext {
+    codeheadTestVersion = '1.0.1'
+
     awsLocalDDB = "1.15.0" // https://mvnrepository.com/artifact/com.amazonaws/DynamoDBLocal
     awsSDK = "1.12.305" // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb
     awsSDK2 = "2.17.276" // https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb
