--- a/keystore-api/build.gradle
+++ b/keystore-api/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compileOnly "org.immutables:value:${immutablesVersion}"
     annotationProcessor "org.immutables:value:${immutablesVersion}"
 
-    testImplementation project(":codehead-test")
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
