--- a/keystore-client/build.gradle
+++ b/keystore-client/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 
     testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
     testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    testImplementation project(":codehead-test")
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
     testImplementation project(":metrics-test")
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
