--- a/keystore-service/build.gradle
+++ b/keystore-service/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
     testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    testImplementation project(":codehead-test")
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
     testImplementation project(":datastore-test")
     testImplementation project(":metrics-test")
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
