--- a/statemachine/build.gradle
+++ b/statemachine/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
 
     // Use JUnit Jupiter Engine for testing.
-    testImplementation project(':codehead-test')
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
 
     testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
     testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
