--- a/keystore-service/build.gradle
+++ b/keystore-service/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
     testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
-    testImplementation project(":datastore-test")
+    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
     testImplementation project(":metrics-test")
     testImplementation("org.assertj:assertj-core:${assertjVersion}")
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
