--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,7 @@ version '1.0.0-SNAPSHOT'
 
 ext {
     codeheadTestVersion = '1.0.1'
+    codeheadDatabaseTestVersion = '1.0.0'
 
     awsLocalDDB = "1.15.0" // https://mvnrepository.com/artifact/com.amazonaws/DynamoDBLocal
     awsSDK = "1.12.305" // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb
