Moved statemachine to it's own project

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,7 @@
  * Copyright (c) 2020 CodeHead Systems. All rights reserved
  */
 
-include 'statemachine',
-        'metrics', 'metrics-test',
+include 'metrics', 'metrics-test',
         'oop-mock-common', 'oop-mock-client', 'oop-mock', 'oop-mock-dynamodb', 'oop-mock-tests',
         'keystore-common', 'keystore-dao', 'keystore-dao-test', 'keystore-dao-ddb', 'keystore-dao-cassandra', 'keystore-dao-sql',
         'keystore-api', 'keystore-service', 'keystore-client', 'keystore-integ-tests'
