--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,19 @@
  * Copyright (c) 2020 CodeHead Systems. All rights reserved
  */
 
+dependencyResolutionManagement {
+    versionCatalogs {
+        repositories {
+            mavenLocal()
+            mavenCentral()
+        }
+        libs {
+            from("com.codeheadsystems:dependencies:1.0.1-SNAPSHOT")
+        }
+    }
+}
+
+
 include 'metrics', 'metrics-test',
         'keystore-common', 'keystore-dao', 'keystore-dao-test', 'keystore-dao-ddb', 'keystore-dao-cassandra', 'keystore-dao-sql',
         'keystore-api', 'keystore-service', 'keystore-client', 'keystore-integ-tests'
