--- a/keystore-client/build.gradle
+++ b/keystore-client/build.gradle
@@ -26,34 +26,35 @@ dependencies {
     implementation project(":keystore-api")
     implementation project(":metrics")
 
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
-    implementation "com.squareup.retrofit2:converter-jackson:${retrofitVersion}"
-    implementation "com.squareup.retrofit2:converter-java8:${retrofitVersion}"
-
-
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
-
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-
-    testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
-    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
     testImplementation project(":metrics-test")
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-    testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
-    testImplementation("com.squareup.retrofit2:retrofit-mock:${retrofitVersion}")
+
+    implementation libs.slf4j.api
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.micrometer.core
+    implementation libs.retrofit
+    implementation libs.retrofit2.converter.jackson
+    implementation libs.retrofit2.converter.java8
+
+
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
+
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+
+    testAnnotationProcessor libs.immutables.value
+    testAnnotationProcessor libs.dagger.compiler
+    testImplementation libs.assertj.core
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.junit.jupiter.params
+    testImplementation libs.junit.jupiter.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.junit.jupiter
+    testImplementation libs.logback.classic 
+    testImplementation libs.logback.core 
+    testImplementation libs.retrofit.mock 
 }
