--- a/keystore-common/build.gradle
+++ b/keystore-common/build.gradle
@@ -22,29 +22,29 @@ checkstyle {
     maxWarnings = 0
 }
 dependencies {
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    implementation libs.slf4j.api
 
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "org.bouncycastle:bcprov-jdk15on:${bouncyVersion}"
-    implementation("com.google.guava:guava:${guavaVersion}")
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.bcprov.jdk15on
+    implementation libs.guava 
 
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
 
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
 
     testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-    testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
+    testImplementation libs.assertj.core 
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.junit.jupiter.params
+    testImplementation libs.junit.jupiter.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.junit.jupiter
+    testImplementation libs.logback.classic 
+    testImplementation libs.logback.core 
 }
 
