--- a/keystore-dao-sql/build.gradle
+++ b/keystore-dao-sql/build.gradle
@@ -23,36 +23,36 @@ dependencies {
     implementation project(":keystore-dao")
     implementation project(":keystore-common")
     implementation project(":metrics")
-
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "io.github.resilience4j:resilience4j-retry:${resilience4jVersion}"
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "io.github.resilience4j:resilience4j-micrometer:${resilience4jVersion}"
-
-
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
-
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-
-    testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
-    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
-    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
     testImplementation project(":keystore-dao-test")
     testImplementation project(":metrics-test")
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-    testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
+    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
+
+    implementation libs.slf4j.api
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.resilience4j.retry
+    implementation libs.micrometer.core
+    implementation libs.resilience4j.micrometer
+
+
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
+
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+
+    testAnnotationProcessor libs.immutables.value
+    testAnnotationProcessor libs.dagger.compiler
+    testImplementation libs.assertj.core 
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.junit.jupiter.params
+    testImplementation libs.junit.jupiter.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.junit.jupiter
+    testImplementation libs.logback.classic 
+    testImplementation libs.logback.core 
 }
 
