--- a/keystore-dao-test/build.gradle
+++ b/keystore-dao-test/build.gradle
@@ -22,27 +22,28 @@ dependencies {
     implementation project(":keystore-common")
     implementation project(":metrics")
     implementation project(":metrics-test")
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "org.bouncycastle:bcprov-jdk15on:${bouncyVersion}"
-
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
-
     implementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
     implementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
-    implementation("org.assertj:assertj-core:${assertjVersion}")
-    implementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    implementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    implementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    implementation "org.mockito:mockito-core:${mockitoVersion}"
-    implementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
+
+    implementation libs.slf4j.api
+
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.bcprov.jdk15on
+
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
+
+    implementation libs.assertj.core
+    implementation libs.junit.jupiter.api
+    implementation libs.junit.jupiter.params
+    implementation libs.junit.jupiter.engine
+    implementation libs.mockito.core
+    implementation libs.mockito.junit.jupiter
 }
 
