--- a/keystore-dao/build.gradle
+++ b/keystore-dao/build.gradle
@@ -23,26 +23,27 @@ checkstyle {
 }
 dependencies {
     implementation project(':keystore-common')
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "org.bouncycastle:bcprov-jdk15on:${bouncyVersion}"
-
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
-
     testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
+    
+    implementation libs.slf4j.api
+
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.bcprov.jdk15on
+
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
+
+    testImplementation libs.assertj.core 
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.junit.jupiter.params
+    testImplementation libs.junit.jupiter.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.junit.jupiter
 }
 
