--- a/keystore-integ-tests/build.gradle
+++ b/keystore-integ-tests/build.gradle
@@ -26,48 +26,48 @@ dependencies {
     implementation project(":keystore-common")
     implementation project(":keystore-api")
     implementation project(":metrics")
-
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "io.github.openfeign:feign-core:${openfeign}"
-    implementation "io.github.openfeign:feign-jackson:${openfeign}"
-    implementation "io.github.openfeign:feign-slf4j:${openfeign}"
-    implementation "io.github.openfeign:feign-micrometer:${openfeign}"
-    implementation "io.github.openfeign:feign-java11:${openfeign}"
-    implementation "io.github.openfeign:feign-jaxrs2:${openfeign}"
-
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
-
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-
-    testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
-    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
     testImplementation project(":metrics-test")
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
 
-    // Logging stuff (api needed due to logback upgrade)
-    testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-access:${logbackVersion}")
-    testImplementation "jakarta.servlet:jakarta.servlet-api:${jakartaServletVersion}"
-    testImplementation "javax.servlet:javax.servlet-api:${javaxServletVersion}"
+    implementation libs.slf4j.api
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.micrometer.core
+    implementation libs.openfeign.core
+    implementation libs.openfeign.jackson
+    implementation libs.feign.slf4j
+    implementation libs.feign.micrometer
+    implementation libs.openfeign.java11
+    implementation libs.openfeign.jaxrs2
+
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
+
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+
+    testAnnotationProcessor libs.immutables.value
+    testAnnotationProcessor libs.dagger.compiler
+    testImplementation  libs.assertj.core  
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.junit.jupiter.params
+    testImplementation libs.junit.jupiter.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.junit.jupiter
+
+    // Logging stuff   api needed due to logback upgrade  
+    testImplementation  libs.logback.classic  
+    testImplementation  libs.logback.core  
+    testImplementation  libs.logback.access  
+    testImplementation libs.jakarta.servlet.api
+    testImplementation libs.javax.servlet.api
 
 
-    testImplementation "io.dropwizard:dropwizard-testing:${dropwizardVersion}"
-    testImplementation "org.testcontainers:testcontainers:${testContainerVersion}"
-    testImplementation "org.testcontainers:cassandra:${testContainerVersion}"
-    testImplementation "org.testcontainers:junit-jupiter:${testContainerVersion}"
-    testImplementation "io.netty:netty-all:${nettyVersion}"
+    testImplementation libs.dropwizard.testing
+    testImplementation libs.testcontainers
+    testImplementation libs.testcontainers.cassandra
+    testImplementation libs.testcontainers.junit.jupiter
+    testImplementation libs.netty.all
 }
