--- a/keystore-service/build.gradle
+++ b/keystore-service/build.gradle
@@ -26,57 +26,57 @@ checkstyle {
 }
 
 dependencies {
-    // DynamoDB
-    dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
-    implementation "software.amazon.awssdk:dynamodb:${awsSDK2}"
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
+    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
+    testImplementation project(":metrics-test")
     implementation project(":keystore-dao-ddb")
-
-    // Cassandra
     implementation project(":keystore-dao-cassandra")
-    implementation "com.datastax.oss:java-driver-core:${cassandraDriverVersion}"
-    testImplementation "org.testcontainers:testcontainers:${testContainerVersion}"
-    testImplementation "org.testcontainers:cassandra:${testContainerVersion}"
-    testImplementation "org.testcontainers:junit-jupiter:${testContainerVersion}"
-
     implementation project(":keystore-dao")
     implementation project(":keystore-common")
     implementation project(":keystore-api")
     implementation project(":metrics")
 
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}"
-    implementation "io.dropwizard:dropwizard-auth:${dropwizardVersion}"
-    implementation "io.dropwizard:dropwizard-core:${dropwizardVersion}"
-    implementation "io.dropwizard:dropwizard-jackson:${dropwizardVersion}"
-    implementation "io.dropwizard:dropwizard-metrics-graphite:${dropwizardVersion}"
-    implementation "io.github.resilience4j:resilience4j-retry:${resilience4jVersion}"
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "io.micrometer:micrometer-registry-graphite:${micrometerVersion}"
-    implementation "io.github.resilience4j:resilience4j-micrometer:${resilience4jVersion}"
-    implementation "io.dropwizard.metrics:metrics-core:${metricsVersion}"
+    // DynamoDB
+    dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
+    implementation "software.amazon.awssdk:dynamodb:${awsSDK2}"
 
-    compileOnly "org.immutables:value:${immutablesVersion}"
-    annotationProcessor "org.immutables:value:${immutablesVersion}"
+    // Cassandra
+    implementation libs.oss.core
+    testImplementation libs.testcontainers
+    testImplementation libs.testcontainers.cassandra
+    testImplementation libs.testcontainers.junit.jupiter
 
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
+    implementation libs.slf4j.api
+    implementation libs.jackson.annotations
+    implementation libs.jackson.core
+    implementation libs.jackson.databind
+    implementation libs.jackson.datatype.jdk8
+    implementation libs.dropwizard.auth
+    implementation libs.dropwizard.core
+    implementation libs.dropwizard.jackson
+    implementation libs.dropwizard.metrics.graphite
+    implementation libs.resilience4j.retry
+    implementation libs.micrometer.core
+    implementation libs.micrometer.registry.graphite
+    implementation libs.resilience4j.micrometer
+    implementation libs.metrics.core
 
-    testAnnotationProcessor "org.immutables:value:${immutablesVersion}"
-    testAnnotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
-    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
-    testImplementation project(":metrics-test")
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-    testImplementation("ch.qos.logback:logback-classic:${logbackVersion}")
-    testImplementation("ch.qos.logback:logback-core:${logbackVersion}")
+    compileOnly libs.immutables.value
+    annotationProcessor libs.immutables.value
+
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+
+    testAnnotationProcessor libs.immutables.value
+    testAnnotationProcessor libs.dagger.compiler
+    testImplementation  libs.assertj.core  
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.junit.jupiter.params
+    testImplementation libs.junit.jupiter.engine
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.junit.jupiter
+    testImplementation  libs.logback.classic  
+    testImplementation  libs.logback.core  
 }
 
 run {
