--- a/metrics-test/build.gradle
+++ b/metrics-test/build.gradle
@@ -40,14 +40,15 @@ def pomConfig = {
 
 dependencies {
     implementation project(":metrics")
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    implementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
-    implementation("org.assertj:assertj-core:${assertjVersion}")
-    implementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
-    implementation("org.mockito:mockito-core:${mockitoVersion}")
+
+    implementation libs.micrometer.core
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+    implementation libs.junit.jupiter.api 
+    implementation libs.assertj.core 
+    implementation libs.mockito.junit.jupiter 
+    implementation libs.mockito.core 
     // Use JUnit Jupiter Engine for testing.
-    implementation("org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}")
-    implementation("io.dropwizard.metrics:metrics-core:${metricsVersion}")
+    implementation libs.junit.jupiter.engine 
+    implementation libs.metrics.core 
 }
