--- a/metrics/build.gradle
+++ b/metrics/build.gradle
@@ -39,17 +39,17 @@ def pomConfig = {
 }
 
 dependencies {
-    implementation "io.micrometer:micrometer-core:${micrometerVersion}"
-    implementation "io.dropwizard.metrics:metrics-core:${metricsVersion}"
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation "com.google.dagger:dagger:${daggerVersion}" // Common files for runtime
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${jupiterVersion}")
-    testImplementation("org.assertj:assertj-core:${assertjVersion}")
-    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
-    testImplementation("org.mockito:mockito-core:${mockitoVersion}")
+    implementation libs.micrometer.core
+    implementation libs.metrics.core
+    implementation libs.slf4j.api
+    implementation libs.dagger // Common files for runtime
+    annotationProcessor libs.dagger.compiler
+    testImplementation libs.junit.jupiter.api
+    testImplementation libs.assertj.core
+    testImplementation libs.mockito.junit.jupiter
+    testImplementation libs.mockito.core
     // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}")
-    testImplementation("org.apache.logging.log4j:log4j-api:${log4jVersion}")
-    testImplementation("org.apache.logging.log4j:log4j-core:${log4jVersion}")
+    testRuntimeOnly libs.junit.jupiter.engine
+    testImplementation libs.log4j.api
+    testImplementation libs.log4j.core
 }
