--- a/keystore-dao-ddb/build.gradle
+++ b/keystore-dao-ddb/build.gradle
@@ -35,17 +35,13 @@ test.doFirst {
 
 dependencies {
     // DynamoDB testing
-    dynamodb "com.amazonaws:DynamoDBLocal:${awsLocalDDB}"
+    dynamodb libs.aws.dynamodblocal
+    implementation libs.software.amazon.awssdk.dynamodb
 
     implementation project(":keystore-dao")
     implementation project(":keystore-common")
     implementation project(":metrics")
-    testImplementation project(":keystore-dao-test")
-    testImplementation project(":metrics-test")
-    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
-    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
 
-    implementation "software.amazon.awssdk:dynamodb:${awsSDK2}"
     implementation libs.slf4j.api
     implementation libs.jackson.annotations
     implementation libs.jackson.core
@@ -61,6 +57,10 @@ dependencies {
     implementation libs.dagger // Common files for runtime
     annotationProcessor libs.dagger.compiler
 
+    testImplementation project(":keystore-dao-test")
+    testImplementation project(":metrics-test")
+    testImplementation "com.codeheadsystems:codehead-test:${codeheadTestVersion}"
+    testImplementation "com.codeheadsystems:database-test:${codeheadDatabaseTestVersion}"
     testAnnotationProcessor libs.immutables.value
     testAnnotationProcessor libs.dagger.compiler
     testImplementation libs.assertj.core 
