--- a/keystore-common/build.gradle
+++ b/keystore-common/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation libs.jackson.core
     implementation libs.jackson.databind
     implementation libs.jackson.datatype.jdk8
-    implementation libs.bcprov.jdk15on
+    implementation libs.bcprov
     implementation libs.guava 
 
     implementation libs.dagger // Common files for runtime
