--- a/keystore-dao/build.gradle
+++ b/keystore-dao/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation libs.jackson.core
     implementation libs.jackson.databind
     implementation libs.jackson.datatype.jdk8
-    implementation libs.bcprov.jdk15on
+    implementation libs.bcprov
 
     implementation libs.dagger // Common files for runtime
     annotationProcessor libs.dagger.compiler
