--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ dependencyResolutionManagement {
             maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         }
         libs {
-            from("com.codeheadsystems:dependencies:1.0.3-SNAPSHOT")
+            from("com.codeheadsystems:dependencies:1.0.3")
         }
     }
 }
