Updated to latest gradle

--- a/keystore-dao-cassandra/build.gradle
+++ b/keystore-dao-cassandra/build.gradle
@@ -12,7 +12,7 @@ ext {
 
 configurations {
     project.archivesBaseName = "${appName}"
-    jar.baseName = "${appName}"
+    jar.archiveBaseName = "${appName}"
     dynamodb
 }
 
