--- a/keystore-integ-tests/build.gradle
+++ b/keystore-integ-tests/build.gradle
@@ -12,7 +12,7 @@ ext {
 
 configurations {
     project.archivesBaseName = "${appName}"
-    jar.baseName = "${appName}"
+    jar.archiveBaseName = "${appName}"
 }
 
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
@@ -21,10 +21,14 @@ checkstyle {
     ignoreFailures = false
     maxWarnings = 0
 }
+test {
+    dependsOn(":keystore-dao-ddb:copyNativeDeps")
+}
 dependencies {
     implementation project(':keystore-service')
     implementation project(":keystore-common")
     implementation project(":keystore-api")
+    implementation project(":keystore-dao-ddb")
 
     implementation libs.slf4j.api
     implementation libs.jackson.annotations
